--- a/Week1/Day 2/CV2.HTML
+++ b/Week1/Day 2/CV2.HTML
@@ -8,7 +8,7 @@
 	<header>
 		<div class="top">
 			<p>Andrés Camhi<br>
-	 		Hi-Tech Sales & Full Stack Developerp<br></p>
+	 		Hi-Tech Sales & Full Stack Developer<br></p>
 			 <a href="https://www.linkedin.com/in/amcamhi/" target="_blank"><img src="https://image.flaticon.com/icons/svg/174/174857.svg" width="30px" height="30px" alt="Linkedin"></a>
 			 <a href="<https://github.com/amcamhi" target="_blank"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="30px" height="30px" alt="Github"></a>
 			 <img src="https://media-exp1.licdn.com/dms/image/C5603AQEiA1Njp9e2Ag/profile-displayphoto-shrink_400_400/0?e=1597881600&v=beta&t=QJ4yXIJ49AfwIaB4BZAhoPYPgD-EiHTFXRlM4xH6f4c" alt="profile pic" id="profilepic">
