--- a/Week1/day4/index.html
+++ b/Week1/day4/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 	<body>
-<div id="wrapper">
+<div id="container">
 	<div class="square">1</div>
 	<div class="square">2</div>
 	<div class="square">3</div>
