--- a/Week1/day5/miniproject.html
+++ b/Week1/day5/miniproject.html
@@ -10,21 +10,21 @@
 	</head>
 	<body>
 	<div id="navbar">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top">
 			<a class="navbar-brand" href="#">Projectexercise #9</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav">
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item active">
 						<a class="nav-link" href="#">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Contact</a>
+						<a class="nav-link" href="#">Contact<span class="badge badge-dark">3</span></a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -52,6 +52,12 @@
 			<p class="lead">This is Excercise #9, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
 			<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
 		</div>
+		<div class="alert alert-warning alert-dismissible  show" role="alert">
+          <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    		<span aria-hidden="true">&times;</span>
+         </button>
+        </div>
 
 		<div id="container">
 			<div class="col1"><h4>Heading</h4>
