--- a/Week2/day3/day3.html
+++ b/Week2/day3/day3.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Challenge 2</title>
+    <title>Document</title>
 </head>
 <body>
-  
-    <script src="DailyChallenge2.js"></script>
+    
+    <script src="day3.js"></script>
 </body>
 </html>
