--- a/Week2/day1/ExcercisesXPgold.html
+++ b/Week2/day1/ExcercisesXPgold.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="ExcercisesXP.js"></script>
+    <script src="ExcercisesXPgold.js"></script>
 </body>
 </html>
