--- a/Week3/day2/day2Excercises.html
+++ b/Week3/day2/day2Excercises.html
@@ -1,3 +1,99 @@
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div id="root"></div>
+    <script src="day2Excersises.js"></script>
+</body>
+</html> -->
+
+<!-- <html>
+<body> 
+
+<table id="sampleTable" border="1"> 
+<tr>
+    <td>Row1 cell1</td> 
+    <td>Row1 cell2</td>
+</tr> 
+<tr>
+    <td>Row2 cell1</td> 
+    <td>Row2 cell2</td>
+</tr> 
+</table>
+
+<input type="button" onclick="insert_Row()" value="Insert row">  
+<script>
+    function insert_Row(){
+        let table = document.getElementById("sampleTable");
+        let row = document.createElement("tr");
+        let cell = document.createElement("td");
+        let cell2 = document.createElement("td")
+        row.appendChild(cell);
+        row.appendChild(cell2)
+        table.appendChild(row);
+    }
+</script>
+</body>
+</html>  -->
+
+<!-- <html>
+<body> 
+
+<table id="sampleTable" border="1"> 
+<tr>
+    <td>Row1 cell1</td> 
+    <td>Row1 cell2</td>
+</tr> 
+<tr>
+    <td>Row2 cell1</td> 
+    <td>Row2 cell2</td>
+</tr> 
+</table>
+
+<input type="button" value="Insert row" id ="boton">  
+<script>
+    document.getElementById("boton").onclick = function insert_Row(){
+        let table = document.getElementById("sampleTable");
+        let row = document.createElement("tr");
+        let cell = document.createElement("td");
+        let cell2 = document.createElement("td")
+        row.appendChild(cell);
+        row.appendChild(cell2)
+        table.appendChild(row);
+    }
+</script>
+</body>
+</html>  -->
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <article>
+        <h1> Some Facts </h1>
+        <h2> The CHOCOLATE </h2>
+        <p>Chocolate is made from tropical Theobroma cacao tree seeds. Its earliest use dates back to the Olmec civilization in Mesoamerica.</p>
+        <p> After the European discovery of the Americas, chocolate became very popular in the wider world, and its demand exploded. </p>
+        <p> Chocolate has since become a popular food product that millions enjoy every day, thanks to its unique, rich, and sweet taste.</p> 
+        <p> But what effect does eating chocolate have on our health?</p> 
+    </article>
+    
+    <label>What is your name?</label><input type="text" name="userName">
+    <label>What did you think of the article?</label><input type="text" name="questionToUser">
+
+    <script src="day2Excersises.js"></script>
+</body>
+</html> -->
+
+<!-- Excercise 2
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +102,29 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="day2Excersises.js"></script>
+    <p><strong>Hello</strong> I hope you are enjoying <strong>this</strong> class. At the
+        <strong>end</strong> you <strong>will</strong> be great Developers!
+        <strong>Enjoy</strong> the <strong>JavaScript </strong> lessons</p>
+        <script src="day2Excersises.js"></script>
 </body>
-</html>
+</html> -->
+
+<!doctype html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="utf-8"> 
+        <title>Volume of a Sphere</title> 
+        <style>  
+            body{padding-top:30px;} 
+            label,input{display:block;}  
+        </style> 
+    </head> 
+    <body> 
+        <p>Input radius value and get the volume of a sphere.</p> 
+    
+            <label for="radius">Radius</label><input type="text" name="radius" id="radius" required> 
+            <label for="volume">Volume</label><input type="text" name="volume" id="volume"> 
+            <button>Submit</button> 
+        <script src="day2Excersises.js"></script>
+    </body> 
+</html> 
