--- a/Week3/day3/dailychallenge.html
+++ b/Week3/day3/dailychallenge.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DailyChallenge day3 w3</title>
 </head>
+
 <body>
   <h3>Write Something Below</h3>
-  <input type="text" id="input" value ="write here...">
+  <input type="text" id="input" value="write here...">
+  <p id="output"></p>
 
 
   <script>
-let input1 = document.getElementById("input");
-input1.addEventListener("keypress", onlyLetters)
+    let p = document.getElementById("output");
+    let input1 = document.getElementById("input");
 
-let text = input1.value
-
-function onlyLetters(){
-
-let noLetters = text.replace(["^a-zA-Z"], "");
-
-return noLetters
-}
+    function onlyLetters() {
+      let noLetters = input1.value.replace(["a-zA-Z"], " ");
+      p.innerHTML = noLetters
+      return noLetters
+    }
+    input1.addEventListener("keypress", onlyLetters)
   </script>
 </body>
+
 </html>
